
----------------------------------
Release: 4.2.RC2
Date:
----------------------------------
Changes/New Features:

CAY-2741 Cleanup TransactionDescriptor and deprecate DefaultTransactionDescriptor
CAY-2743 Deprecate ROP
CAY-2749 Deprecate object clustering transports
CAY-2750 Deprecate web module
CAY-2775 Change Objectstyle maven repository URL
CAY-2776 Upgrade Gradle to 7.6

Bug Fixes:

CAY-2755 Modeler: Entities are not sorted by name in the class generation view
CAY-2762 Modeler: Difference in toolbars colors on OSX
CAY-2763 Split expressions do not work with flattened relationships
CAY-2764 Split expressions do not work with DB relationships
CAY-2765 dbimport: check excluded catalogs and schemas for the SQLServer
CAY-2769 Modeler: 'rootPath' attribute is missing
CAY-2777 Reverse relationship is not set with single table inheritance
CAY-2782 Modeler: save button becomes active on DataMap comment field focus

----------------------------------
Release: 4.2.RC1
Date: June 3, 2022
----------------------------------
Changes/New Features:

CAY-2711 JDK 17 compatibility
CAY-2728 Add ExtendedType to generate user-friendly exceptions for internally used values

Bug Fixes:

CAY-2630 Prefetched relationships not preserving pending changes
CAY-2697 Read-only cgen template creates mutator methods for to-many relationships
CAY-2724 Duplicating relationship after editing its name
CAY-2727 Modeler: cgen destDir Unix platform path separator
CAY-2729 Unable to use custom templates from a folder at upper level then datamap
CAY-2730 Duplicating lines in a cgen config saved to datamap.xml
CAY-2731 Exception when setting a CLOB on H2 v2.0.202
CAY-2733 Modeler can't use custom templates set in a datamap
CAY-2734 Improve support for the DECIMAL type
CAY-2736 Can't use function names as a path in a string-based expression

----------------------------------
Release: 4.2.B1
Date: November 25, 2021
----------------------------------
Changes/New Features:
