@@ -22,6 +22,7 @@ CAY-2776 Upgrade Gradle to 7.6
 
 Bug Fixes:
 
+CAY-2732 Exception when creating ObjEntity from a DbEntity
 CAY-2755 Modeler: Entities are not sorted by name in the class generation view
 CAY-2762 Modeler: Difference in toolbars colors on OSX
 CAY-2763 Split expressions do not work with flattened relationships
